--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,22 @@
+#===================
+# SBRC project
+#===================
 
+server:
+  port: 8050
+
+#===================
+# SBRC database
+#===================
+spring:
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/RentalCarDB?serverTimezone=Europe/Rome
+    username: root
+    password: root
+  jpa:
+    hibernate:
+    ddl-auto: update
+    dialect: org.hibernate.dialect.MySQL5Dialect
+    generate-ddl: true
+    show-sql: true
