--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,11 @@ spring:
     dialect: org.hibernate.dialect.MySQL5Dialect
     generate-ddl: true
     show-sql: true
+
+
+# ==============================================================
+# = Livello Log di Sicurezza
+# ==============================================================
+logging:
+  level:
+    org.springframework.security: DEBUG
